# drainage-system

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260312_0001_initial_schema.py
backend/app/: main.py
backend/app/analysis/: __init__.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  analysis.py  auth.py  dashboard.py  imports.py  manholes.py  map_objects.py  pipes.py  plots.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/imports/: __init__.py
backend/app/models/: __init__.py  analysis_run.py  auth_audit_log.py  manhole.py  pipe.py  user.py  user_session.py
backend/app/repositories/: __init__.py  analysis_repository.py  auth_audit_repository.py  auth_repository.py  common_queries.py  manhole_repository.py  map_repository.py  pipe_repository.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  dashboard.py  imports.py  manhole.py  map_objects.py  pipe.py  plot.py
backend/app/services/: analysis_service.py  auth_service.py  dashboard_service.py  import_service.py  manhole_service.py  map_service.py  pipe_service.py  plot_service.py  static_map_data.py
backend/drainage_system_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_auth_routes.py
backend/tests/auth/: test_auth_service_db.py
docs/: auth-login.md  auth-merge-checklist.md  auth-merge-rehearsal.md  auth-pr-note.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  (+4 more)
(+45 files in other folders)
